--- a/lambda/package.json
+++ b/lambda/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "aws-sdk": "^2.2.18",
+    "pg": "^4.4.3",
+    "raven": "^0.9.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {},
